@@ -18,8 +18,11 @@ git-annex (7.20190731) UNRELEASED; urgency=medium
   * init: When the repo is already initialized, and --version requests a
     different version, error out rather than silently not changing the
     version.
-  * Fix some test suite failures on Windows.
+  * merge: When run with a branch parameter, merges from that branch.
+    This is especially useful when using an adjusted branch, because
+    it applies the same adjustment to the branch before merging it.
   * test: Add pass using adjusted unlocked branch.
+  * Fix some test suite failures on Windows.
 
  -- Joey Hess <id@joeyh.name>  Thu, 01 Aug 2019 00:11:56 -0400
 
